--- a/src/Styles/Colors.css
+++ b/src/Styles/Colors.css
@@ -1,9 +1,15 @@
-:root {
-    --dark: #020203;
-    --danger: #ff0000;
-    --primary: #4ab8ff;
-    --alert: #f9ce23;
-    --rose: #fd5181;
-    --light: #e5e5e5;
-    --secondary: #fbfbfb;
+.bg-secondary {
+    background: var(--secondary);
+}
+
+.bg-light {
+    background: var(--light);
+}
+
+.bg-danger {
+    background: var(--danger);
+}
+
+.bg-dark {
+    background: var(--dark);
 }
