--- a/src/Styles/Recharts.css
+++ b/src/Styles/Recharts.css
@@ -6,8 +6,13 @@
 
 .bar-chart-wrapper {
     position: relative;
-    max-width: 835px;
+    max-width: 100%;
     max-height: 320px;
+    margin-bottom: 1em;
+}
+
+.radar-chart-wrapper {
+    background: #282d30;
 }
 
 .barchart-tooltip {
@@ -18,4 +23,9 @@
 
 .label {
     text-align: center;
+}
+
+.custom-average {
+    padding: 10px;
+    width: 100px;
 }
