--- a/src/Styles/Recharts.css
+++ b/src/Styles/Recharts.css
@@ -26,6 +26,9 @@
 }
 
 .custom-average {
-    padding: 10px;
-    width: 100px;
+    width: 70px;
+    height: 30px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
