--- a/src/Pages/Dashboard/Dashboard.css
+++ b/src/Pages/Dashboard/Dashboard.css
@@ -7,6 +7,8 @@
     position: relative;
     width: 84%;
     margin: 0 auto;
+    height: 100%;
+    padding-bottom: 1em;
 }
 
 .dashboard-chart-group {
@@ -28,4 +30,10 @@
     display: flex;
     flex-direction: column;
     gap: 39px;
+}
+
+@media (max-width: 1400px) {
+    .dashboard-chart-group {
+        grid-template-columns: 1fr 1fr;
+    }
 }
