--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -3,6 +3,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+    width: 100%;
 }
 
 .navbar_header {
@@ -25,4 +26,10 @@
     line-height: 24px;
     letter-spacing: 0px;
     text-align: left;
+}
+
+@media (max-width: 1256px) {
+    .navbar_menu {
+        gap: 2rem;
+    }
 }
